// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover demos > demo: Basic 1`] = `
"<div style="padding: 40px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Hover me</span></button></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`Popover demos > demo: Placement 1`] = `
"<div style="display: flex; flex-direction: column; gap: 8px; align-items: center; padding: 60px;">
  <div style="display: flex; gap: 8px; justify-content: center;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">TL</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Top</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">TR</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </div>
  <div style="display: flex; justify-content: space-between; width: 340px;">
    <div style="display: flex; flex-direction: column; gap: 8px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">LT</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Left</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">LB</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end-->
    </div>
    <div style="display: flex; flex-direction: column; gap: 8px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">RT</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Right</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">RB</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end-->
    </div>
  </div>
  <div style="display: flex; gap: 8px; justify-content: center;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">BL</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Bottom</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">BR</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </div>
</div>"
`;

exports[`Popover demos > demo: Trigger 1`] = `
"<div style="display: flex; gap: 16px; padding: 40px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Hover</span></button></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Click</span></button></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Focus</span></button></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;
